--- a/kube/staging.env
+++ b/kube/staging.env
@@ -1,4 +1,4 @@
 export NODEPORT=31938
 export NSFSHARE_CLUSTER_IP=10.102.247.244
-export PGDATA_PVC=pgdata
-export PGDATA_PVC_SIZE=10G
+export PGDATA_PVC=pgdata3
+export PGDATA_PVC_SIZE=750G
