--- a/kube/geoapi.yaml
+++ b/kube/geoapi.yaml
@@ -186,7 +186,7 @@ spec:
         envFrom:
           - configMapRef:
               name: geoapi-environment-vars
-        image: rabbitmq
+        image: rabbitmq:3.8.18
         ports:
           - containerPort: 5672
         name: geoapi-rabbitmq
