Task/DES-2003 Update prod deployment to use new PG data claim (#63)
* Making pgdata volume claim configurable

* Fix pvc and use customizable size

* Fix Makefile

* Update staging.env and our config

* Add util yaml for looking at older db

* Add pvc configs

* Fix storage class name

* Fix prod/stagig env files

* Pin rabbitmq to earlier version

--- a/kube/geoapi.yaml
+++ b/kube/geoapi.yaml
@@ -80,15 +80,15 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   labels:
-    app: pgdata
-  name: pgdata
+    app: ${PGDATA_PVC}
+  name: ${PGDATA_PVC}
 spec:
   accessModes:
   - ReadWriteOnce
-  storageClassName: rbd
+  storageClassName: rbd-new
   resources:
     requests:
-      storage: 10G
+      storage: ${PGDATA_PVC_SIZE}
 ---
 apiVersion: v1
 kind: Service
@@ -186,7 +186,7 @@ spec:
         envFrom:
           - configMapRef:
               name: geoapi-environment-vars
-        image: rabbitmq
+        image: rabbitmq:3.8.18
         ports:
           - containerPort: 5672
         name: geoapi-rabbitmq
@@ -398,6 +398,8 @@ spec:
             secretKeyRef:
               name: postgres
               key: password
+        - name: PGDATA
+          value: /var/lib/postgresql/data/
         envFrom:
           - configMapRef:
               name: geoapi-environment-vars
@@ -419,7 +421,7 @@ spec:
       volumes:
       - name: pgdata
         persistentVolumeClaim:
-          claimName: pgdata
+          claimName: ${PGDATA_PVC}
 
 ---
 apiVersion: apps/v1
