--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+git+https://github.com/mapillary/mapillary_tools@4bfebf8705d06d8568619cc0c6b83fd3d4fad95e
 agavepy==0.9.3
 alembic==1.4.1
 amqp==2.5.2
