--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -55,6 +55,7 @@ services:
       - .:/app
       - assets:/assets
     environment:
+      - MAPILLARY_CLIENT_TOKEN=4866220476802272
       - FLASK_APP=/app/geoapi/app.py
       - APP_ENV=development
       - ASSETS_BASE_DIR=/assets
@@ -75,6 +76,7 @@ services:
       - .:/app
       - assets:/assets
     environment:
+      - MAPILLARY_CLIENT_TOKEN=4866220476802272
       - FLASK_APP=/app/geoapi/app.py
       - APP_ENV=development
       - ASSETS_BASE_DIR=/assets
@@ -99,6 +101,7 @@ services:
       - 8.8.8.8
       - 8.8.4.4
     environment:
+      - MAPILLARY_CLIENT_TOKEN=4866220476802272
       - FLASK_APP=/app/geoapi/app.py
       - APP_ENV=development
       - ASSETS_BASE_DIR=/assets
@@ -108,3 +111,5 @@ services:
     container_name: geoapi
     hostname: geoapi
     command: "gunicorn -w 4 -b 0.0.0.0:8000 geoapi.app:app -k gevent --reload --timeout 300"
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
