--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
         env:
           POSTGRES_USER: dev
           POSTGRES_PASSWORD: dev
-          POSTGRES_DB: dev
+          POSTGRES_DB: test
         ports:
           -  5432:5432
         options: >-
