Use build from cache

--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -31,6 +31,7 @@ services:
     build:
       context: .
       dockerfile: ./Dockerfile.potree
+      cache_from: taccaci/geoapi-workers:latest
     volumes:
       - .:/app
       - assets:/assets
@@ -53,6 +54,7 @@ services:
     build:
       context: .
       dockerfile: ./Dockerfile
+      cache_from: taccaci/geoapi:latest
     volumes:
       - .:/app
       - assets:/assets
