--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,7 +39,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
-    - name: Login to DockerHub Registry
-      run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USER}} --password-stdin
+    - uses: docker/login-action@v1
+      with:
+        registry: private-registry-url
+        username: ${{ secrets.DOCKER_PASSWORD  }}
+        password: ${{ secrets.DOCKER_USER }}
     - name: Run worker test
       run: docker-compose -f docker-compose.test.yml -p geoapi_test run workers pytest -m "worker"
