--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,6 +28,8 @@ jobs:
       uses: actions/setup-python@v1
       with:
         python-version: 3.7
+    - name: Install ffmpeg
+      run: sudo apt-get install -y ffmpeg
     - name: Install dependecies
       run: | 
         python -m pip install --upgrade pip
