--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,7 +43,7 @@ jobs:
     - uses: actions/checkout@v1
     - uses: docker/login-action@v1
       with:
-        username: ${{ secrets.DOCKER_RO_GEOAPI_USER }}
-        password: ${{ secrets.DOCKER_RO_GEOAPI_KEY }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+        username: ${{ secrets.DOCKER_USER  }}
     - name: Run worker test
       run: docker-compose -f docker-compose.test.yml -p geoapi_test run workers pytest -m "worker"
