--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,18 @@ on:
   pull_request:
     branches: [ '**' ]
 jobs:
+  Linting:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Setup Python
+        uses: actions/setup-python@v1
+        with:
+          python-version: 3.7
+      - name: Install flake8
+        run: pip install flake8
+      - name: Run flake8
+        run: flake8 geoapi
   Geoapi_Unit_Tests:
     runs-on: ubuntu-18.04
     env:
