--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,13 +12,13 @@ GeoAlchemy2 = "0.11.1"
 geojson = "2.5.0"
 ffmpeg-python = "0.2.0"
 geopandas = "0.10.2"
-PyJWT = "2.3.0"
+PyJWT = "==1.7.1"
 pyproj = "3.3.0"
 pytest = "^5.3.5"
 pytest-cov = "2.8.1"
 Shapely = "1.7.0"
 SQLAlchemy = "1.3.13"
-Pillow = "9.0.1"
+Pillow = "==7.1.2"
 Fiona = "1.8.21"
 gunicorn = "^20.1.0"
 gevent = "^21.12.0"
