--- a/Dockerfile.potree
+++ b/Dockerfile.potree
@@ -1,10 +1,13 @@
-FROM pdal/pdal:2.1
+FROM pdal/pdal:2.4.2
+
+ENV DEBIAN_FRONTEND=noninteractive
 
 RUN apt-get update && apt-get install -y \
 libtiff-dev libgeotiff-dev libgdal-dev \
-libboost-system-dev libboost-thread-dev libboost-filesystem-dev libboost-program-options-dev libboost-regex-dev libboost-iostreams-dev \
-git cmake build-essential wget python3.7 python3-pip python3-dev ffmpeg git \
-unzip
+libboost-system-dev libboost-thread-dev libboost-filesystem-dev \
+libboost-program-options-dev libboost-regex-dev libboost-iostreams-dev \
+git cmake build-essential python3.9 python3-pip python3-dev ffmpeg \
+unzip git wget libc6-dev gcc-multilib
 
 WORKDIR /opt
 
@@ -24,8 +27,16 @@ RUN update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.8 2
 
 RUN pip3 install --upgrade pip
 
-COPY requirements.txt /requirements.txt
-RUN pip3 install -r /requirements.txt
+ENV POETRY_VERSION=1.1.13
+ENV POETRY_HOME=/opt/poetry
+ENV PATH="$POETRY_HOME/bin:$PATH"
+RUN curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py | python -
+RUN poetry config virtualenvs.create false
+COPY pyproject.toml poetry.lock ./
+RUN poetry install
+
+#COPY requirements.txt /requirements.txt
+#RUN pip3 install -r /requirements.txt
 
 # Multiple gdal's are installed but we want 2.2 to get needed crs information
 ENV GDAL_DATA "/usr/share/gdal/2.2"
