--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,7 @@ Werkzeug = "^2.1.2"
 flask-restx = "^0.5.1"
 psycopg2 = "^2.9.3"
 requests = "^2.28.0"
-laspy = "^2.1.2"
+laspy = "==1.7.1"
 configparser = "^5.2.0"
 cryptography = "^37.0.2"
 mapillary-tools = { git = "https://github.com/mapillary/mapillary_tools.git", rev = "4bfebf8" }
