--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ pytest = "^5.3.5"
 pytest-cov = "2.8.1"
 Shapely = "1.7.0"
 SQLAlchemy = "1.3.13"
-Pillow = "==7.1.2"
+Pillow = "==8.3.2"
 Fiona = "1.8.21"
 gunicorn = "^20.1.0"
 gevent = "^21.12.0"
@@ -27,7 +27,7 @@ Werkzeug = "^2.1.2"
 flask-restx = "^0.5.1"
 psycopg2 = "^2.9.3"
 requests = "^2.28.0"
-laspy = "==1.7.1"
+laspy = "1.6.0"
 configparser = "^5.2.0"
 cryptography = "^37.0.2"
 mapillary-tools = { git = "https://github.com/mapillary/mapillary_tools.git", rev = "4bfebf8" }
