--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = ""
 authors = ["Your Name <you@example.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = "^3.8"
 celery = "5.2.3"
 alembic = "^1"
 GeoAlchemy2 = "0.11.1"
@@ -18,7 +18,7 @@ pytest = "^5.3.5"
 pytest-cov = "2.8.1"
 Shapely = "1.7.0"
 SQLAlchemy = "1.3.13"
-Pillow = "==8.3.2"
+Pillow = "7.1.0"
 Fiona = "1.8.21"
 gunicorn = "^20.1.0"
 gevent = "^21.12.0"
