--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,13 +30,21 @@ jobs:
     - name: Setup Python
       uses: actions/setup-python@v1
       with:
-        python-version: 3.7
+        python-version: 3.8
     - name: Install ffmpeg
       run: sudo apt-get install -y ffmpeg
-    - name: Install dependecies
-      run: | 
-        python -m pip install --upgrade pip
-        pip install -q -r requirements.txt
+    - name: Setup Poetry
+      uses: abatilo/actions-poetry@v2.0.0
+      with:
+        poetry-version: 1.1.0
+    - uses: actions/cache@v1
+      with:
+        path: ~/.cache/pypoetry/virtualenvs
+        key: ${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
+        restore-keys: |
+          ${{ runner.os }}-poetry-
+    - name: Install Python Packages
+      run: poetry install
     - name: Run server-side unit tests
       run: pytest
   Workers_Unit_Tests:
