--- a/requirements.txt
+++ b/requirements.txt
@@ -69,6 +69,7 @@ pytz==2019.3
 regex==2020.2.20
 requests==2.23.0
 requests-toolbelt==0.9.1
+requests-mock==1.9.3
 Shapely==1.7.0
 six==1.14.0
 SQLAlchemy==1.3.13
