Task/DES-2236 add retry attempts to file getting (#99)
* Retry to get file multiple times from tapis before giving up

Right now this is attmped if we are seeing CS-196 bug

* Add unit testing

* Add requests-mock

* Fix wording and tests

* Refactor to remove separate _get_file_using_service_account

* Fix requests-mock version

* Fix flake8

--- a/requirements.txt
+++ b/requirements.txt
@@ -68,6 +68,7 @@ python-editor==1.0.4
 pytz==2019.3
 regex==2020.2.20
 requests==2.23.0
+requests-mock==1.9.3
 requests-toolbelt==0.9.1
 Shapely==1.7.0
 six==1.14.0
