--- a/requirements.txt
+++ b/requirements.txt
@@ -70,6 +70,7 @@ regex==2020.2.20
 requests==2.23.0
 requests-mock==1.9.3
 requests-toolbelt==0.9.1
+requests-mock==1.9.3
 Shapely==1.7.0
 six==1.14.0
 SQLAlchemy==1.3.13
