--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,20 +10,20 @@ celery = "5.2.3"
 alembic = "^1"
 GeoAlchemy2 = "0.11.1"
 geojson = "2.5.0"
-ffmpeg-python = "0.2.0"
-geopandas = "0.10.2"
+ffmpeg-python = "^0.2.0"
+geopandas = "^0.10.2"
 PyJWT = "==1.7.1"
-pyproj = "3.3.0"
+pyproj = "^3.3.0"
 pytest = "^5.3.5"
-pytest-cov = "2.8.1"
-Shapely = "1.7.0"
-SQLAlchemy = "1.3.13"
+pytest-cov = "^2.8.1"
+Shapely = "^1.8"
+SQLAlchemy = "^1.3.13"
 Pillow = "7.1.0"
 Fiona = "1.8.21"
 gunicorn = "^20.1.0"
 gevent = "^21.12.0"
 Flask = "^2.1.2"
-Werkzeug = "^2.1.2"
+Werkzeug = "2.1.2"
 flask-restx = "^0.5.1"
 psycopg2 = "^2.9.3"
 requests = "^2.28.0"
