--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ pytest = "^5.3.5"
 pytest-cov = "^2.8.1"
 Shapely = "^1.8"
 SQLAlchemy = "^1.3.13"
-Pillow = "7.1.0"
+Pillow = "^9.2.0"
 Fiona = "1.8.21"
 gunicorn = "^20.1.0"
 gevent = "^21.12.0"
@@ -32,6 +32,7 @@ configparser = "^5.2.0"
 cryptography = "^37.0.2"
 mapillary-tools = { git = "https://github.com/mapillary/mapillary_tools.git", rev = "4bfebf8" }
 requests-mock = "^1.10.0"
+ExifRead = "^2.3.2"
 
 [tool.poetry.dev-dependencies]
 
