--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = ""
 authors = ["Your Name <you@example.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = "^3.9"
 celery = "5.2.3"
 alembic = "^1"
 GeoAlchemy2 = "0.11.1"
@@ -33,6 +33,7 @@ cryptography = "^37.0.2"
 mapillary-tools = { git = "https://github.com/mapillary/mapillary_tools.git", rev = "4bfebf8" }
 requests-mock = "^1.10.0"
 ExifRead = "^2.3.2"
+flake8 = "^5.0.4"
 
 [tool.poetry.dev-dependencies]
 
