--- a/Dockerfile.potree
+++ b/Dockerfile.potree
@@ -30,7 +30,7 @@ RUN pip3 install --upgrade pip
 ENV POETRY_VERSION=1.1.13
 ENV POETRY_HOME=/opt/poetry
 ENV PATH="$POETRY_HOME/bin:$PATH"
-RUN curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py | python -
+RUN curl -sSL https://install.python-poetry.org | python3 -
 RUN poetry config virtualenvs.create false
 COPY pyproject.toml poetry.lock ./
 RUN poetry install
