--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,7 +44,9 @@ jobs:
       with:
         python-version: 3.9
     - name: Install ffmpeg
-      run: sudo apt-get install -y ffmpeg
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y ffmpeg
     - name: Setup Poetry
       uses: abatilo/actions-poetry@v2.0.0
       with:
