--- a/conf/nginx.kube.conf
+++ b/conf/nginx.kube.conf
@@ -8,6 +8,20 @@ http {
         include /etc/nginx/mime.types;
         client_max_body_size 10g;
 
+        location / {
+             add_header "Access-Control-Allow-Origin"  *;
+
+            # Preflighted requests
+            if ($request_method = OPTIONS ) {
+                add_header "Access-Control-Allow-Origin"  *;
+                add_header "Access-Control-Allow-Methods" "GET, POST, OPTIONS, HEAD, PUT, DELETE";
+                add_header "Access-Control-Allow-Headers" "*";
+                add_header 'Access-Control-Max-Age' 1728000;
+                add_header 'Content-Length' 0;
+                return 204;
+            }
+        }
+
         location /assets {
             max_ranges 0;
             expires 30d;
