--- a/kube/geoapi.yaml
+++ b/kube/geoapi.yaml
@@ -48,6 +48,16 @@ data:
               max_ranges 0;
               expires 30d;
               add_header "Access-Control-Allow-Origin"  *;
+
+              # Preflighted requests
+              if ($request_method = OPTIONS ) {
+                  add_header "Access-Control-Allow-Origin"  *;
+                  add_header "Access-Control-Allow-Methods" "GET, POST, OPTIONS, HEAD, PUT, DELETE";
+                  add_header "Access-Control-Allow-Headers" "*";
+                  add_header 'Access-Control-Max-Age' 1728000;
+                  add_header 'Content-Length' 0;
+                  return 204;
+              }
               alias /assets/;
           }
       }
