--- a/devops/database/docker-compose-database.yml
+++ b/devops/database/docker-compose-database.yml
@@ -2,7 +2,7 @@ version: "3"
 services:
   postgres:
     image: postgis/postgis:11-3.3
-    env_file: ../../secret.env # username/password
+    env_file: ../../../secret.env # username/password
     volumes:
       - ./postgresql.conf:/var/lib/postgresql/data/postgresql.conf:ro
       - /database:/var/lib/postgresql/data
