--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,6 +58,7 @@ services:
       - APP_ENV=development
       - ASSETS_BASE_DIR=/assets
       - TENANT
+      - APP_CONTEXT=celery
     stdin_open: true
     tty: true
     container_name: geoapiworkers
