--- a/kube/geoapi.yaml
+++ b/kube/geoapi.yaml
@@ -244,6 +244,8 @@ spec:
           - configMapRef:
               name: geoapi-environment-vars
         env:
+          - name: APP_CONTEXT
+            value: "celery"
           - name: RABBITMQ_PASSWD
             valueFrom:
               secretKeyRef:
