--- a/devops/geoapi-services/docker-compose.yml
+++ b/devops/geoapi-services/docker-compose.yml
@@ -21,7 +21,7 @@ services:
       - 8888:80
     volumes:
       - /assets:/assets
-      - ./conf/nginx.conf:/etc/nginx/nginx.conf
+      - ./nginx.conf:/etc/nginx/nginx.conf
     networks:
       - geoapi
 
