--- a/devops/docker-compose.local.yml
+++ b/devops/docker-compose.local.yml
@@ -38,7 +38,7 @@ services:
       - 8888:80
     volumes:
       - assets:/assets
-      - ./conf/nginx.conf:/etc/nginx/nginx.conf
+      - ./local_conf/nginx.conf:/etc/nginx/nginx.conf
     networks:
       - geoapi
 
@@ -50,7 +50,7 @@ services:
     networks:
       - geoapi
     volumes:
-      - .:/app
+      - ../:/app
       - assets:/assets
     environment:
       - MAPILLARY_CLIENT_TOKEN=${MAPILLARY_CLIENT_TOKEN}
@@ -91,7 +91,7 @@ services:
     networks:
       - geoapi
     volumes:
-      - .:/app
+      - ../:/app
       - assets:/assets
     ports:
       - 8000:8000
