--- a/devops/geoapi-services/docker-compose.yml
+++ b/devops/geoapi-services/docker-compose.yml
@@ -29,14 +29,14 @@ services:
   workers:
     build:
       context: .
-      dockerfile: ./Dockerfile.potree
+      dockerfile: ../Dockerfile.potree
     networks:
       - geoapi
     volumes:
       - .:/app
       - /assets:/assets
     environment:
-      - MAPILLARY_CLIENT_TOKEN=4866220476802272
+      - MAPILLARY_CLIENT_TOKEN=${MAPILLARY_CLIENT_TOKEN}
       - FLASK_APP=/app/geoapi/app.py
       - APP_ENV=development
       - ASSETS_BASE_DIR=/assets
@@ -50,7 +50,7 @@ services:
   celerybeat:
     build:
       context: .
-      dockerfile: ./Dockerfile.potree
+      dockerfile: ../Dockerfile.potree
     networks:
       - geoapi
     volumes:
@@ -70,7 +70,7 @@ services:
   api:
     build:
       context: .
-      dockerfile: ./Dockerfile
+      dockerfile: ../Dockerfile
     networks:
       - geoapi
     volumes:
@@ -86,7 +86,7 @@ services:
       - FLASK_APP=/app/geoapi/app.py
       - APP_ENV=development
       - ASSETS_BASE_DIR=/assets
-      - TENANT
+      - TENANT=${TENANT}
     stdin_open: true
     tty: true
     container_name: geoapi
