--- a/kube/prod.env
+++ b/kube/prod.env
@@ -1,4 +1,3 @@
 export NODEPORT=31474
 export NSFSHARE_CLUSTER_IP=10.102.87.187
-export MAPILLARY_CLIENT_TOKEN='5156692464392931'
-export MAPILLARY_CLIENT_ID='MLY|5156692464392931|4f1118aa1b06f051a44217cb56bedf79'
+export MAPILLARY_CLIENT_TOKEN='MLY|5156692464392931|4f1118aa1b06f051a44217cb56bedf79'
