--- a/kube/staging.env
+++ b/kube/staging.env
@@ -1,4 +1,3 @@
 export NODEPORT=31938
 export NSFSHARE_CLUSTER_IP=10.106.172.196
-export MAPILLARY_CLIENT_TOKEN='4936281379826603'
-export MAPILLARY_CLIENT_ID='MLY|4936281379826603|f8c4732d3c9d96582b86158feb1c1a7a'
+export MAPILLARY_CLIENT_TOKEN='MLY|4936281379826603|f8c4732d3c9d96582b86158feb1c1a7a'
