--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,7 +58,9 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-poetry-
     - name: Install Python Packages
-      run: poetry install
+      run: |
+        cd devops
+        poetry install
     - name: Run server-side unit tests
       run: poetry run pytest
   Workers_Unit_Tests:
