--- a/devops/geoapi-services/sample.env
+++ b/devops/geoapi-services/sample.env
@@ -1,6 +1,11 @@
+DB_USERNAME=dev
+DB_NAME=dev
+DB_PASSWD=dev
+DB_HOST=${DB_HOST}
 RABBITMQ_DEFAULT_USER=dev
 RABBITMQ_DEFAULT_PASS=dev
 RABBITMQ_DEFAULT_VHOST=dev
+RABBITMQ_HOSTNAME=rabbitmq
 APP_ENV=development #  "production" for STAGING and PROD?
 TENANT="{'DESIGNSAFE': {'service_account_token': 'ABCD1234'}}"
 MAPILLARY_CLIENT_TOKEN="ABC|1234564675757|abcd1234abcd12345"
