--- a/devops/Dockerfile.potree
+++ b/devops/Dockerfile.potree
@@ -32,16 +32,16 @@ ENV POETRY_HOME=/opt/poetry
 ENV PATH="$POETRY_HOME/bin:$PATH"
 RUN curl -sSL https://install.python-poetry.org | python3 -
 RUN poetry config virtualenvs.create false
-COPY devops/pyproject.toml devops/poetry.lock ./
+COPY ../pyproject.toml ../poetry.lock ./
 RUN poetry install
 
 ENV PYTHONPATH "${PYTHONPATH}:/app"
 
-# isntall geos into condo the base pdal image is using
+# install geos into condo the base pdal image is using
 RUN conda install geos -y -n base
 
 
 WORKDIR /
 RUN mkdir app
-COPY ./geoapi /app/geoapi
+COPY ../geoapi /app/geoapi
 WORKDIR /app/geoapi
