--- a/devops/Dockerfile
+++ b/devops/Dockerfile
@@ -12,10 +12,14 @@ ENV POETRY_HOME=/opt/poetry
 ENV PATH="$POETRY_HOME/bin:$PATH"
 RUN curl -sSL https://install.python-poetry.org | python3 -
 RUN poetry config virtualenvs.create false
-COPY ../pyproject.toml ../poetry.lock ./
-RUN poetry install
 
 RUN mkdir /app
+WORKDIR /app
+
+COPY poetry.lock ./
+COPY pyproject.toml ./
+RUN poetry install
+
 COPY ../geoapi /app/geoapi
 ENV PYTHONPATH "${PYTHONPATH}:/app"
 WORKDIR /app/geoapi
