--- a/devops/Dockerfile.potree
+++ b/devops/Dockerfile.potree
@@ -32,7 +32,9 @@ ENV POETRY_HOME=/opt/poetry
 ENV PATH="$POETRY_HOME/bin:$PATH"
 RUN curl -sSL https://install.python-poetry.org | python3 -
 RUN poetry config virtualenvs.create false
-COPY ../pyproject.toml ../poetry.lock ./
+COPY pyproject.toml ./
+COPY poetry.lock ./
+
 RUN poetry install
 
 ENV PYTHONPATH "${PYTHONPATH}:/app"
