Fix docker compose statement

--- a/devops/geoapi-services/Makefile
+++ b/devops/geoapi-services/Makefile
@@ -1,8 +1,8 @@
 
 .PHONY: start
 start:
-	docker-compose -f docker-compose.yml up
+	docker compose -f docker-compose.yml up
 
 .PHONY: stop
 stop:
-	docker-compose -f docker-compose.yml down
+	docker compose -f docker-compose.yml down
