update docker compose and Makefile

--- a/devops/geoapi-services/Makefile
+++ b/devops/geoapi-services/Makefile
@@ -1,8 +1,12 @@
 
 .PHONY: start
 start:
-	docker compose -f docker-compose.yml up
+	docker compose -f docker-compose.yml up -d
 
 .PHONY: stop
 stop:
 	docker compose -f docker-compose.yml down
+
+.PHONY: pull
+pull:
+    docker pull api workers nginx rabbitmq
