--- a/devops/geoapi-services/docker-compose.yml
+++ b/devops/geoapi-services/docker-compose.yml
@@ -10,6 +10,10 @@ services:
     networks:
       - geoapi
     env_file: /opt/portal/conf/secrets.env
+    environment:
+      - FLASK_APP=/app/geoapi/app.py
+      - ASSETS_BASE_DIR=/assets
+      - GEOAPI_TAG=ENV_GEOAPI_TAG
 
   nginx:
     image: nginx
