--- a/devops/geoapi-services/secrets.sample.env
+++ b/devops/geoapi-services/secrets.sample.env
@@ -4,6 +4,9 @@ DB_PASSWD=dev
 DB_HOST=${DB_HOST}
 RABBITMQ_DEFAULT_USER=dev
 RABBITMQ_DEFAULT_PASS=dev
+# TODO  WP-283 remove duplication; we thought about doing something like RABBITMQ_DEFAULT_PASS=$RABBITMQ_PASSWORD in docker compose, but unclear;  or change our geoapi settings.py
+RABBITMQ_USERNAME=dev
+RABBITMQ_PASSWORD='dev1234'
 RABBITMQ_DEFAULT_VHOST=dev
 RABBITMQ_HOSTNAME=rabbitmq
 APP_ENV=development #  "production" for STAGING and PROD?
