--- a/devops/geoapi-services/secrets.sample.env
+++ b/devops/geoapi-services/secrets.sample.env
@@ -3,11 +3,12 @@ DB_NAME=dev
 DB_PASSWD=dev
 DB_HOST=${DB_HOST}
 RABBITMQ_DEFAULT_USER=dev
-RABBITMQ_DEFAULT_PASS=dev
-# TODO  WP-283 remove duplication; we thought about doing something like RABBITMQ_DEFAULT_PASS=$RABBITMQ_PASSWORD in docker compose, but unclear;  or change our geoapi settings.py
+RABBITMQ_DEFAULT_PASS='dev1234'
+# TODO  WP-283 remove duplication (3 things); we thought about doing something like RABBITMQ_DEFAULT_PASS=$RABBITMQ_PASSWORD in docker compose, but unclear;  or change our geoapi settings.py
 RABBITMQ_USERNAME=dev
 RABBITMQ_PASSWORD='dev1234'
 RABBITMQ_DEFAULT_VHOST=dev
+RABBITMQ_VHOST=dev
 RABBITMQ_HOSTNAME=rabbitmq
 APP_ENV=development #  "production" for STAGING and PROD?
 TENANT="{'DESIGNSAFE': {'service_account_token': 'ABCD1234'}}"
