Do not run docker up in background for testing

--- a/devops/geoapi-services/Makefile
+++ b/devops/geoapi-services/Makefile
@@ -2,7 +2,8 @@
 .PHONY: start
 start:
 	echo "starting (GEOAPI_TAG=${GEOAPI_TAG})"
-	docker compose -f docker-compose.yml up -d
+	#docker compose -f docker-compose.yml up -d
+	docker compose -f docker-compose.yml up 
 
 .PHONY: stop
 stop:
