Fix tabbitmq password variable on example secrets file

--- a/devops/geoapi-services/secrets.sample.env
+++ b/devops/geoapi-services/secrets.sample.env
@@ -6,7 +6,7 @@ RABBITMQ_DEFAULT_USER=dev
 RABBITMQ_DEFAULT_PASS='dev1234'
 # TODO  https://jira.tacc.utexas.edu/browse/WP-283 remove duplication
 RABBITMQ_USERNAME=dev
-RABBITMQ_PASSWORD='dev1234'
+RABBITMQ_PASSWD='dev1234'
 RABBITMQ_DEFAULT_VHOST=dev
 RABBITMQ_VHOST=dev
 RABBITMQ_HOSTNAME=rabbitmq
