task/WG-134 setup docker compose for geoapi services vm (#142)
* Add initial/work-in-progress docker-compose

* Add nginx conf

* Move docker infrastructure to devops folder

* Move remaining docker infrastructure to devops folder

* Fix local development's docker-compose

* Add additional improvements to docker-compose for geoapi-services vms

* Add some variables

* Use one env variable for mapillary

* Fix dockerfiles

* Add secret.env to gitignore

* Update docker-compose test yaml

* Fix installing of python packages on github actions workflow

* Change to devops/ before running test on CI workflow

* Simplify install/pytest step in CI workflow

* Refactor location of dockerfiles and images used

* Fix nginx conf for deployment

* Change secrets location to /opt/portal/conf/secret.env

* Use absolute path for secrets.env

* Add makefile for geoapi-services

* Refactor dockerfile

* Correct path to poetry.lock and pyproject.toml

* Fix paths in dockerfile

* Rename Dockerfile.potree to Dockerfile.worker

* Rename Dockerfile.potree to Dockerfile.worker again

* Fix workflow

* Fix workflow

* Remove env file usage in Makefile

Using docker-compose.yml where that is hardcoded

* Pass in GEOAPI_TAG from env

* Remove echo

* Fix docker compose statement

* update docker compose and Makefile

* Fix MAKEFILE

* Add todo

* Fix MAKEFILE again

* Add missing RABBITMQ_VHOST

* Do not run docker up in background for testing

* Fix gitignore and improve dockerignore

* Bump rabbitmq version

* Update todo

* Fix tabbitmq password variable on example secrets file

* Refactor how settings are set based on APP_ENV

* Add hazmapper to docker-compose

* Fix makefile

* Expose rabbitmq port from geoapi-services

* Improve make build command

* Improve deploy command

* Add a copy of poetry files

* Fix unit test settings

* Move to devops before running test

* Removed unused ste

--- a/devops/Dockerfile
+++ b/devops/Dockerfile
@@ -12,10 +12,13 @@ ENV POETRY_HOME=/opt/poetry
 ENV PATH="$POETRY_HOME/bin:$PATH"
 RUN curl -sSL https://install.python-poetry.org | python3 -
 RUN poetry config virtualenvs.create false
-COPY pyproject.toml poetry.lock ./
-RUN poetry install
 
 RUN mkdir /app
-COPY ./geoapi /app/geoapi
+WORKDIR /app
+
+COPY devops/poetry.lock devops/pyproject.toml ./
+RUN poetry install
+
+COPY geoapi /app/geoapi
 ENV PYTHONPATH "${PYTHONPATH}:/app"
 WORKDIR /app/geoapi
