--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,9 +58,13 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-poetry-
     - name: Install Python Packages
-      run: poetry install
+      run: |
+        cd devops
+        poetry install
     - name: Run server-side unit tests
-      run: poetry run pytest
+      run: |
+        cd devops
+        poetry run pytest ../geoapi
   Workers_Unit_Tests:
     runs-on: ubuntu-latest
     services:
@@ -86,7 +90,7 @@ jobs:
     - name: Build worker image
       run: |
         docker pull taccaci/geoapi-workers:latest
-        docker build --cache-from taccaci/geoapi-workers:latest -t taccaci/geoapi-workers:latest -f Dockerfile.potree .
+        docker build --cache-from taccaci/geoapi-workers:latest -t taccaci/geoapi-workers:latest -f devops/Dockerfile.worker .
     - name: Run worker test
       run: |
         docker run --network="host" -e APP_ENV='testing' -e DB_HOST='localhost'  taccaci/geoapi-workers:latest pytest -m "worker"
