--- a/devops/docker-compose.test.yml
+++ b/devops/docker-compose.test.yml
@@ -8,10 +8,10 @@ volumes:
 networks:
   geoapi:
     driver: bridge
-services:
 
+services:
   postgres_test:
-    image: mdillon/postgis:11-alpine
+    image: mdillon/postgis
     volumes:
       - pgdata:/var/lib/postgresql/data
     ports:
@@ -28,13 +28,9 @@ services:
       - POSTGRES_DB=test
 
   workers:
-    build:
-      context: .
-      dockerfile: ./Dockerfile.potree
-      cache_from:
-        - taccaci/geoapi-workers:latest
+    image: taccaci/geoapi-workers:local
     volumes:
-      - .:/app
+      - ..:/app
       - assets:/assets
     environment:
       - MAPILLARY_CLIENT_TOKEN=4866220476802272
@@ -52,13 +48,9 @@ services:
     hostname: geoapiworkers
 
   api:
-    build:
-      context: .
-      dockerfile: ./Dockerfile
-      cache_from:
-        - taccaci/geoapi:latest
+    image: taccaci/geoapi-workers:local
     volumes:
-      - .:/app
+      - ..:/app
       - assets:/assets
     ports:
       - 8000:8000
