--- a/devops/geoapi-services/docker-compose.yml
+++ b/devops/geoapi-services/docker-compose.yml
@@ -1,63 +1,43 @@
 ---
 version: "3"
 
-volumes:
-  assets:
-  pgdata:
-
 networks:
   geoapi:
 
 services:
-
   rabbitmq:
-    image: rabbitmq
+    image: rabbitmq:3.12.6
     networks:
       - geoapi
+    ports:
+      - "5672:5672"
+    env_file: /opt/portal/conf/secrets.env
     environment:
-      - RABBITMQ_DEFAULT_USER=dev
-      - RABBITMQ_DEFAULT_PASS=dev
-      - RABBITMQ_DEFAULT_VHOST=dev
-
-  postgres:
-    image: mdillon/postgis:11-alpine
-    volumes:
-      - pgdata:/var/lib/postgresql/data
-    networks:
-      - geoapi
-    container_name: geoapi_postgres
-    hostname: geoapi_postgres
-    environment:
-      - POSTGRES_PASSWORD=dev
-      - POSTGRES_USER=dev
-      - POSTGRES_DB=dev
+      - FLASK_APP=/app/geoapi/app.py
+      - ASSETS_BASE_DIR=/assets
+      - GEOAPI_TAG=ENV_GEOAPI_TAG
 
   nginx:
     image: nginx
     ports:
       - 8888:80
     volumes:
-      - assets:/assets
-      - ./conf/nginx.conf:/etc/nginx/nginx.conf
+      - /assets:/assets
+      - ./nginx.conf:/etc/nginx/nginx.conf
     networks:
       - geoapi
 
-
   workers:
-    build:
-      context: .
-      dockerfile: ./Dockerfile.potree
+    image: taccaci/geoapi-workers:${GEOAPI_TAG}
     networks:
       - geoapi
     volumes:
-      - .:/app
-      - assets:/assets
+      - /assets:/assets
+    env_file: /opt/portal/conf/secrets.env
     environment:
-      - MAPILLARY_CLIENT_TOKEN=4866220476802272
       - FLASK_APP=/app/geoapi/app.py
-      - APP_ENV=development
       - ASSETS_BASE_DIR=/assets
-      - TENANT
+      - GEOAPI_TAG=ENV_GEOAPI_TAG
     stdin_open: true
     tty: true
     container_name: geoapiworkers
@@ -65,19 +45,16 @@ services:
     command: "celery -A geoapi.celery_app worker -l info"
 
   celerybeat:
-    build:
-      context: .
-      dockerfile: ./Dockerfile.potree
+    image: taccaci/geoapi-workers:${GEOAPI_TAG}
     networks:
       - geoapi
     volumes:
-      - .:/app
-      - assets:/assets
+      - /assets:/assets
+    env_file: /opt/portal/conf/secrets.env
     environment:
-      - MAPILLARY_CLIENT_TOKEN=4866220476802272
       - FLASK_APP=/app/geoapi/app.py
-      - APP_ENV=development
       - ASSETS_BASE_DIR=/assets
+      - GEOAPI_TAG=ENV_GEOAPI_TAG
     stdin_open: true
     tty: true
     container_name: geoapicelerybeat
@@ -85,25 +62,21 @@ services:
     command: "celery -A geoapi.celery_app beat -l info"
 
   api:
-    build:
-      context: .
-      dockerfile: ./Dockerfile
+    image: taccaci/geoapi:${GEOAPI_TAG}
     networks:
       - geoapi
     volumes:
-      - .:/app
-      - assets:/assets
+      - /assets:/assets
     ports:
       - 8000:8000
     dns:
       - 8.8.8.8
       - 8.8.4.4
+    env_file: /opt/portal/conf/secrets.env
     environment:
-      - MAPILLARY_CLIENT_TOKEN=4866220476802272
       - FLASK_APP=/app/geoapi/app.py
-      - APP_ENV=development
       - ASSETS_BASE_DIR=/assets
-      - TENANT
+      - GEOAPI_TAG=ENV_GEOAPI_TAG
     stdin_open: true
     tty: true
     container_name: geoapi
@@ -111,3 +84,9 @@ services:
     command: "gunicorn -w 4 -b 0.0.0.0:8000 geoapi.app:app -k gevent --reload --timeout 300"
     extra_hosts:
       - "host.docker.internal:host-gateway"
+
+  hazmapper:
+    image: taccaci/hazmapper:${HAZMAPPER_TAG}
+    ports:
+      - 80:80
+    container_name: hazmapper
