Add taggit to geoapi-services devops

--- a/devops/geoapi-services/Makefile
+++ b/devops/geoapi-services/Makefile
@@ -10,4 +10,4 @@ stop:
 
 .PHONY: pull
 pull:
-	docker compose pull api workers nginx rabbitmq
+	docker compose pull api workers nginx rabbitmq hazmapper taggit
