Task/WG-160 add taggit to devops (#146)
* Add taggit to geoapi-services devops

* Improve echo statement

--- a/devops/geoapi-services/Makefile
+++ b/devops/geoapi-services/Makefile
@@ -1,7 +1,7 @@
 
 .PHONY: start
 start:
-	echo "starting (GEOAPI_TAG=${GEOAPI_TAG})"
+	echo "starting (GEOAPI_TAG=${GEOAPI_TAG} HAZMAPPER_TAG=${HAZMAPPER_TAG} TAGGIT_TAG=${TAGGIT_TAG})"
 	docker compose -f docker-compose.yml up -d
 
 .PHONY: stop
@@ -10,4 +10,4 @@ stop:
 
 .PHONY: pull
 pull:
-	docker compose pull api workers nginx rabbitmq
+	docker compose pull api workers nginx rabbitmq hazmapper taggit
