Set watchtower interval to 300s

--- a/devops/geoapi-services/docker-compose.yml
+++ b/devops/geoapi-services/docker-compose.yml
@@ -113,10 +113,10 @@ services:
     image: containrrr/watchtower:1.7.1
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
-    command: api celerybeat hazmapper hazmapper-react taggit
+    command: --interval 300 api celerybeat hazmapper hazmapper-react taggit
     # Watchtower configuration for development environment. This service monitors
-    # and updates the specified containers. Staging/Production use specific commit
-    # hash tags, so updates are controlled and do not affect those environments.
-    # In Development, 'latest' tags are used, enabling Watchtower to automatically
-    # update these containers.
+    # and updates the specified containers every 5 min (300s). Staging/Production
+    # use specific commit hash tags, so updates are controlled and do not affect
+    # those environments. In Development, 'latest' tags are used, enabling
+    # Watchtower to automatically update these containers.
     restart: always
