--- a/devops/geoapi-services/nginx.conf
+++ b/devops/geoapi-services/nginx.conf
@@ -5,7 +5,23 @@ events {
 }
 
 http {
+    # Redirect HTTP traffic to HTTPS
     server {
+      listen 80;
+      listen [::]:80;
+      server_name _;  # Use _ to match any hostname
+
+      # Redirect all HTTP requests to HTTPS
+      location / {
+          return 301 https://$host$request_uri;
+      }
+    }
+
+    server {
+      listen 443 ssl;
+      ssl_certificate     /etc/ssl/certs/portal.cer;
+      ssl_certificate_key /etc/ssl/private/portal.key;
+
       include /etc/nginx/mime.types;
       client_max_body_size 25g;
       proxy_read_timeout 600s;
