task/WG-254: use file-metadata routes from DesignSafe (#193)
* Update service account for v3

* Update how we get file metadata

* Update tests

* Add testing notes

* Using DESIGNSAFE_URL as setting variable

* Fix test setting

* Remove service account usage

* Update tests

* Fix linting issues

* Remove TENANT as no longer using service accounts

--- a/devops/docker-compose.local.yml
+++ b/devops/docker-compose.local.yml
@@ -55,7 +55,8 @@ services:
       - FLASK_APP=/app/geoapi/app.py
       - APP_ENV=local
       - ASSETS_BASE_DIR=/assets
-      - TENANT=${TENANT}
+      - DESIGNSAFE_URL=${DESIGNSAFE_URL}
+
     stdin_open: true
     tty: true
     container_name: geoapiworkers
@@ -97,7 +98,7 @@ services:
       - FLASK_APP=/app/geoapi/app.py
       - APP_ENV=local
       - ASSETS_BASE_DIR=/assets
-      - TENANT=${TENANT}
+      - DESIGNSAFE_URL=${DESIGNSAFE_URL}
     stdin_open: true
     tty: true
     container_name: geoapi
