Rework env variables
* Add TAPIS_CLIENT_ID and  TAPIS_CLIENT_KEY
* Make env variable usage in docker compose consistent

--- a/devops/geoapi-services/secrets.sample.env
+++ b/devops/geoapi-services/secrets.sample.env
@@ -10,6 +10,11 @@ RABBITMQ_PASSWD='dev1234'
 RABBITMQ_DEFAULT_VHOST=dev
 RABBITMQ_VHOST=dev
 RABBITMQ_HOSTNAME=rabbitmq
-APP_ENV=development #  "production" for STAGING and PROD?
+APP_ENV=local # possible values are: production, staging, dev, experimental, local
 TENANT="{'DESIGNSAFE': {'service_account_token': 'ABCD1234'}}"
 MAPILLARY_CLIENT_TOKEN="ABC|1234564675757|abcd1234abcd12345"
+FLASK_SESSION_SECRET_KEY=abcd1234
+
+# Tapis clients
+TAPIS_CLIENT_ID=foo123
+TAPIS_CLIENT_KEY=bar123
