--- a/devops/docker-compose.local.yml
+++ b/devops/docker-compose.local.yml
@@ -51,11 +51,11 @@ services:
       - ../:/app
       - assets:/assets
     environment:
-      - MAPILLARY_CLIENT_TOKEN=${MAPILLARY_CLIENT_TOKEN}
+      - MAPILLARY_CLIENT_TOKEN
       - FLASK_APP=/app/geoapi/app.py
       - APP_ENV=local
       - ASSETS_BASE_DIR=/assets
-      - DESIGNSAFE_URL=${DESIGNSAFE_URL}
+      - DESIGNSAFE_URL
 
     stdin_open: true
     tty: true
@@ -94,11 +94,14 @@ services:
       - 8.8.8.8
       - 8.8.4.4
     environment:
-      - MAPILLARY_CLIENT_TOKEN=${MAPILLARY_CLIENT_TOKEN}
+      - MAPILLARY_CLIENT_TOKEN
       - FLASK_APP=/app/geoapi/app.py
       - APP_ENV=local
       - ASSETS_BASE_DIR=/assets
-      - DESIGNSAFE_URL=${DESIGNSAFE_URL}
+      - DESIGNSAFE_URL
+      - FLASK_SESSION_SECRET_KEY
+      - TAPIS_CLIENT_ID
+      - TAPIS_CLIENT_KEY
     stdin_open: true
     tty: true
     container_name: geoapi
