--- a/devops/docker-compose.test.yml
+++ b/devops/docker-compose.test.yml
@@ -1,6 +1,4 @@
 ---
-version: "3.8"
-
 volumes:
   assets:
   pgdata:
@@ -62,6 +60,8 @@ services:
       - APP_ENV=testing
       - ASSETS_BASE_DIR=/assets
       - TENANT
+      - DESIGNSAFE_URL
+      - FLASK_SESSION_SECRET_KEY
     stdin_open: true
     tty: true
     networks:
