Install mapillary tools by downloading first as using poetry causing errors on worker
Bumped python in worker image from 3.8 to 3.9 to match api image
Bumped other locked packages

--- a/devops/Dockerfile
+++ b/devops/Dockerfile
@@ -13,7 +13,13 @@ ENV PATH="$POETRY_HOME/bin:$PATH"
 RUN curl -sSL https://install.python-poetry.org | python3 -
 RUN poetry config virtualenvs.create false
 
+# use local mapillary (instead of directly from github in pyproject.toml)
+# due to issues with worker image environment
+RUN git clone https://github.com/mapillary/mapillary_tools.git /opt/mapillary_source
+RUN cd /opt/mapillary_source && git checkout 4bfebf8
+
 RUN mkdir /app
+
 WORKDIR /app
 
 COPY devops/poetry.lock devops/pyproject.toml ./
