--- a/devops/Dockerfile.worker
+++ b/devops/Dockerfile.worker
@@ -6,7 +6,7 @@ RUN apt-get update && apt-get install -y \
 libtiff-dev libgeotiff-dev libgdal-dev \
 libboost-system-dev libboost-thread-dev libboost-filesystem-dev \
 libboost-program-options-dev libboost-regex-dev libboost-iostreams-dev \
-git cmake build-essential python3.8 python3-pip python3-dev ffmpeg \
+git cmake build-essential python3.9 python3-pip python3-dev ffmpeg \
 unzip git wget libc6-dev gcc-multilib
 
 WORKDIR /opt
@@ -20,7 +20,7 @@ cmake -DCMAKE_BUILD_TYPE=Release -DLASZIP_INCLUDE_DIRS=/opt/LAStools/LASzip/dll/
 make && make install && cp -r /opt/PotreeConverter/PotreeConverter/resources /resources
 ADD devops/misc/potree/page_template /resources/page_template
 
-RUN update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.8 2
+RUN update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.9 2
 
 RUN pip3 install --upgrade pip
 
@@ -29,15 +29,22 @@ ENV POETRY_HOME=/opt/poetry
 ENV PATH="$POETRY_HOME/bin:$PATH"
 RUN curl -sSL https://install.python-poetry.org | python3 -
 RUN poetry config virtualenvs.create false
-COPY devops/pyproject.toml devops/poetry.lock ./
+#COPY devops/pyproject.toml devops/poetry.lock ./
+COPY devops/pyproject.toml ./
+
+# use local mapillary (instead of directly from github in pyproject.toml)
+# due to issues with worker image environment
+RUN git clone https://github.com/mapillary/mapillary_tools.git /opt/mapillary_source
+RUN cd /opt/mapillary_source && git checkout 4bfebf8
+
+WORKDIR /opt
+
+# install geos into condo the base pdal image is using
+RUN conda install setuptools geos -y -n base
 
 RUN poetry install
 
 ENV PYTHONPATH "${PYTHONPATH}:/app"
-
-# install geos into condo the base pdal image is using
-RUN conda install geos -y -n base
-
 
 WORKDIR /
 RUN mkdir app
